--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="icon" href="img/boat.png">
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="css/login.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="css/index.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="css/animate.css" media="screen,projection" />
 
   <!--Let browser know website is optimized for mobile-->
@@ -27,100 +28,66 @@
     };
     firebase.initializeApp(config);
   </script>
+  <title>Welcome to Traveler | Traveler </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="CeTknMlUfxMoa1-6oTNVihlqcCXhYTI7qfocIiWtxDI">
+  <meta name="description" content="Pool - Add events to marcopolo">
+  <meta property="og:description" content="Quickly add events to marcopolo">
+  <meta property="og:image" content="img/pool.png">
+  <meta property="og:title" content="Add events to marcopolo">
+  <!-- StyleSheets-->
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,900" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- JavaScripts-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
 </head>
-
-  <nav>
-    <div class="nav-wrapper color-page3 white-text">
-      <a href="#" class="brand-logo center"><span class="white-text text-lighten-2 heavy"><b>marco</b></span><span class="blue-text heavy">polo </span><span class="thin white-text hide-on-med-and-down	">Traveler</span></a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons white-text">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="www/signin.html"><span class="white-text">Login</span></a></li>
-        <li><a href="www/create.html"><span class="white-text">Apply</span></a></li>
-      </ul>
+<nav>
+  <div class="container-wide">
+    <div class="row">
+      <div class="col s12 m3">
+        <a href="index.html" class="brand-logo hide-on-med-and-down">marcopolo Traveler Portal</a>
+      </div>
+      <div class="col s12 m9">
+        <div class="right ">
+          <ul>
+            <li><a href="#features">How it Works</a></li>
+            <li><a href="www/signin.html">Login</a></li>
+            <li><a href="www/create.html" class="modal-trigger btn nav-sign-up waves-effect waves-light hide-on-med-and-down">Apply Here</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </nav>
-<ul class="sidenav" id="mobile-demo">
-  <li><a href="www/signin.html">Login</a></li>
-  <li><a href="www/create.html">Create Account</a></li>
-  <li><a href="collapsible.html">Contact Us</a></li>
-</ul>
+  </div>
+</nav>
 
 <body>
-  <div class="valign" style="width:100%;">
-    <div class="container">
-      <div class="row">
-        <div class="col s12 m12 ">
-          <div class="card animated slideInLeft" id="rcorners1">
-            <div class="card-content">
-              <h4 class="left"><b>Welcome to <span class="teal-text">Traveler</span>.</b></h4>
-              <h5 class="right">The <span class="teal-text text-lighten-2 heavy"><b>marco</b></span><span class="blue-text heavy">polo </span> Admin Portal</h5>
-              <br>
-            </div>
-            <div class="row center">
-              <div class="input-field col s12">
-              </div>
-            </div>
+  <div class="hero hero-landing">
+    <div class="row valign-wrapper no-valign-wrapper-on-mobile">
+      <div class="col l5 valign hero-text">
+        <div class="container-wide">
+          <h1>Welcome to the Traveler Portal.</h1>
+          <h2>Swipe right on the events you like and swipe left on the ones you dont, its as easy as that. Being a campus Traveler hs its own perk, apply today!</h2><a href="www/create.html" class="btn btn-large waves-effect waves-light sign-up-btn">Apply here</a></div>
+      </div>
+      <div class="col l7 no-right-padding valign hero-img-col"><a href="" class="modal-trigger"><img src="img/traveler.png" alt="Sign Up Now" class="hero-img responsive-img"></a></div>
+    </div>
+  </div>
+  <div id="features" class="how section scrollspy">
+    <div class="how-question">How does the Traveler Portal work?</div>
+    <div class="how-icon"><i class="material-icons">aspect_ratio</i></div>
+    <div class="how-step row">
+      <div class="how-step-left col l6 valign-wrapper">
+        <div class="container-wide">
+          <div class="how-step-content">
+            <div class="how-step-left-icon"><i class="material-icons">view_carousel</i></div>
+            <h3 class="how-step-title">Approve Events with a Swipe</h3>
+            <div class="how-step-description">Swipe right or left to approve or deny events</div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="card animated fadeInLeft" id="rcorners1">
-            <div class="card-content">
-              <div class="row">
-                <h5 class="left"><b>Approve Events</b></h5>
-              </div>
-              <div class="row">
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <br>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card animated fadeInUp" id="rcorners1">
-            <div class="card-content">
-              <div class="row">
-                <h5 class="left"><b>Talk to your peers</b></h5>
-              </div>
-              <div class="row">
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card animated fadeInRight" id="rcorners1">
-            <div class="card-content">
-              <div class="row">
-                <h5 class="left"><b>Real Data from Users</b></h5>
-              </div>
-              <div class="row">
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-              <br></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12 m12 ">
-          <div class="card animated slideInUp" id="rcorners1">
-            <div class="card-content">
-              <div class="row">
-                <h5 class="left"><b>Let the Party begin</b></h5>
-              </div>
-              <div class="row">
-                <div class="left col s12 m6">
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                  in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </div>
-                <div class="left col s12 m3 push-m1">
-                  <img src="https://images.unsplash.com/photo-1505236858219-8359eb29e329?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d14a810136c7528ba19f04ff77b8130d&auto=format&fit=crop&w=800&q=60" class="hide-on-med-and-down" style="width: 400px; height: 300px;">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="how-step-right col offset-l1 l5 no-right-padding valign"><img src="img/travelerMobile.png" alt="Choose a Dope Theme" class="responsive-img z-depth-3"></div>
     </div>
   </div>
 </body>
