--- a/www/signin.html
+++ b/www/signin.html
@@ -6,6 +6,8 @@
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="icon" href="../img/boat.png">
+<title>Login | Traveler Portal</title>
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="../css/login.css" media="screen,projection" />
@@ -37,19 +39,19 @@
 </head>
 <nav>
   <div class="nav-wrapper color-page3 white-text">
-    <a href="#" class="brand-logo center"><span class="white-text text-lighten-2 heavy"><b>marco</b></span><span class="blue-text heavy">polo </span><span class="thin white-text hide-on-med-and-down	">Pool</span></a>
+    <a href="#" class="brand-logo center"><span class="white-text text-lighten-2 heavy"><b>marco</b></span><span class="blue-text heavy">polo </span><span class="thin white-text hide-on-med-and-down	"> Traveler</span></a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons white-text">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="../index.html"><span class="white-text">Home</span></a></li>
       <li><a href="signin.html"><span class="white-text">Login</span></a></li>
-      <li><a href="create.html"><span class="white-text">Create Account</span></a></li>
+      <li><a href="#"><span class="white-text">Apply Here</span></a></li>
     </ul>
   </div>
 </nav>
 <ul class="sidenav" id="mobile-demo">
   <li><a href="../index.html">Home</a></li>
   <li><a href="signin.html">Login</a></li>
-  <li><a href="create.html">Create Account</a></li>
+  <li><a href="#">Apply Here</a></li>
   <li><a href="#">Contact Us</a></li>
 </ul>
 
@@ -61,7 +63,7 @@
           <div class="col s12 m6 offset-m3">
             <div class="card animated flipInY" id="rcorners1">
               <div class="card-content">
-                <h5 class="center">Login to Pool</h5>
+                <h5 class="center">Login to Traveler Portal</h5>
                 <form>
                   <div class="row">
                     <div class="input-field col s12">
@@ -80,11 +82,6 @@
               <div class="row center">
                 <div class="input-field col s12">
                   <a class="waves-effect waves-light btn-large color-page" onclick="login()"><i class="material-icons left">pool</i>Login</a>
-                </div>
-              </div>
-              <div class="row center">
-                <div class="input-field col s12">
-                  Don't have an account?<a href="create.html"> &nbspCreate one here</a>
                 </div>
               </div>
             </div>
